kubernetes/argocd/applications/media/apps/readarr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readarr
  namespace: media
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Readarr
    gethomepage.dev/icon: readarr.png
    gethomepage.dev/href: https://readarr.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=readarr
    gethomepage.dev/widget.type: readarr
    gethomepage.dev/widget.url: http://readarr.media.svc.cluster.local
    gethomepage.dev/widget.key: 55da3c21057f4b36af5ede0ae208837b
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - readarr.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /signalr
      backendRefs:
        - name: readarr
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: crowdsec-bouncer
      backendRefs:
        - group: ""
          kind: Service
          name: readarr
          port: 80
          weight: 1
